[gd_scene load_steps=6 format=3 uid="uid://cjl6jloi3444o"]

[ext_resource type="Script" path="res://Scripts/base/tranca_level_1.gd" id="1_qu4h4"]
[ext_resource type="Texture2D" uid="uid://dfw08nc8uaa1f" path="res://Assets/level1/tranca.png" id="2_ld60n"]
[ext_resource type="Theme" uid="uid://bkukbt3r70wyy" path="res://Themes/padrao_digital.tres" id="3_ltwno"]
[ext_resource type="Texture2D" uid="uid://csk82xffou2hn" path="res://Assets/level2/seta.png" id="4_5cy50"]
[ext_resource type="Theme" uid="uid://dm14ee3gun48n" path="res://Themes/padrao_fala.tres" id="5_0fa0i"]

[node name="tranca_level1" type="Node2D"]
script = ExtResource("1_qu4h4")

[node name="tranca_back" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_ld60n")

[node name="Numbers" type="Node2D" parent="."]

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 478.0
offset_top = 271.0
offset_right = 772.0
offset_bottom = 330.0
rotation = -0.0192633
theme = ExtResource("3_ltwno")

[node name="voltar" type="TextureButton" parent="."]
offset_left = 4.0
offset_top = 617.0
offset_right = 105.0
offset_bottom = 717.0
texture_normal = ExtResource("4_5cy50")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="textPlayer" type="RichTextLabel" parent="."]
offset_left = 18.0
offset_top = 613.0
offset_right = 1260.0
offset_bottom = 710.0
theme = ExtResource("5_0fa0i")
bbcode_enabled = true

[node name="TimerTxt" type="Timer" parent="."]

[connection signal="lines_edited_from" from="TextEdit" to="." method="_on_text_edit_lines_edited_from"]
[connection signal="button_up" from="voltar" to="." method="_on_voltar_button_up"]
[connection signal="timeout" from="TimerTxt" to="." method="_on_timer_txt_timeout"]
